--- a/list.json.example
+++ b/list.json.example
@@ -4,6 +4,7 @@
         "id" : "",
         "page" : "",
         "link" : "",
-        "statement" : ""
+        "statement" : "",
+        "last" : ""
     }
 ]
