--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/LeftLibrary/statement-crawler.git"
   },
   "author": "",
-  "license": "AGPL-3.0-or-later",
+  "license": "GPL-3.0-only",
   "bugs": {
     "url": "https://github.com/LeftLibrary/statement-crawler/issues"
   },
