--- a/list.json.example
+++ b/list.json.example
@@ -3,8 +3,10 @@
         "name" : "",
         "id" : "",
         "page" : "",
+        "block" : "",
         "link" : "",
-        "statement" : "",
+        "title" : "",
+        "article" : "",
         "last" : ""
     }
 ]
