--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "statement-crawler",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/LeftLibrary/statement-crawler/issues"
   },
-  "homepage": "https://github.com/LeftLibrary/statement-crawler#readme"
+  "homepage": "https://github.com/LeftLibrary/statement-crawler#readme",
+  "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "puppeteer": "^22.6.3"
+  }
 }
